crates/aranya-policy-lang/tests/data/command_without_open_block.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Syntax error
  |
6 |     policy {
  |     ^ expected open_block
